fix: scroll snap align center

--- a/assets/style.css
+++ b/assets/style.css
@@ -24,7 +24,7 @@ body {
 #skills,
 #work {
   scroll-margin: 0;
-  scroll-snap-align: start;
+  scroll-snap-align: center;
   scroll-snap-stop: normal;
 }
 
